# nfc-forum-tags

./: .gitignore  Cargo.toml  README.md  devenv.nix
.github/workflows/: rust.yml
src/: lib.rs  tag.rs  tlv.rs  vec.rs
src/type2/: cc.rs  memory.rs  mod.rs  reader.rs  tlv.rs
