[package]
name = "nfc-forum-tags"
version = "0.1.0"
edition = "2024"
categories = ["embedded", "no-std"]
description = "NFC Forum Tag Type operations"
keywords = ["nfc", "ndef", "no-std", "embedded"]
license = "GPL-3.0-or-later"

[features]
default = []
alloc = []
std = ["alloc"]

[dependencies]
heapless = "0.9"
num_enum = { version = "0.7", default-features = false }
